Fix word wrapping in gists for good (damn CSS...)

--- a/assets/src/overrides.css
+++ b/assets/src/overrides.css
@@ -32,5 +32,7 @@ body {
 
 /* Content of embedded gists MUST NOT be wrapped */
 .gist-highlight pre {
-  white-space: nowrap;
+  overflow: auto;
+  word-wrap: normal;
+  white-space: pre;
 }
